k8s/ingress/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: everyone-ingress-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - everyone-ingressgateway
  http:
    - route:
        - destination:
            host: nginx-service
